--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
-    "seed": "node -r dotenv/config ./scripts/seed.js"
+    "seed": "node -r dotenv/config ./scripts/seed.js",
+    "test": "vitest"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/react": "^15.0.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "jsdom": "^24.0.0",
     "next": "^14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "vitest": "^1.6.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
